metade da prova prática

--- a/MaterialApoio/MaterialApoio/styles.css
+++ b/MaterialApoio/MaterialApoio/styles.css
@@ -148,7 +148,8 @@ label {
 /* Ajusta os campos de entrada */
 input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"], 
+input[type="number"] {
     width: 80%; /* Ocupa toda a largura do formulário */
     padding: 8px;
     margin-bottom: 10px;
